2011-03-14  Ryuan Choi  <ryuan.choi@samsung.com>

Reviewed by Martin Robinson.

        [GTK] Possible leaks after splitting TextCheckerClientEnchant.
        https://bugs.webkit.org/show_bug.cgi?id=55989

        Convert gchar* to GOwnPtr<gchar> and refactor the code.

        * WebCoreSupport/TextCheckerClientEnchant.cpp:
        (WebKit::TextCheckerClientEnchant::checkSpellingOfString):

Canonical link: https://commits.webkit.org/70982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81102 268f45cc-cd09-0410-ab3c-d52691b4dbfc